--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
   <head>
     <title>This is the title of the webpage!</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VQG55C6HEZ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-VQG55C6HEZ');
+    </script>
   </head>
   <body>
     <p>This is an example paragraph.</p>
