--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     </script>
   </head>
   <body>
-    <p>This is an example paragraph.</p>
+    <a href='purchase.html'>Purchase Item</a>
   </body>
 </html>
