--- a/paypal.html
+++ b/paypal.html
@@ -3,13 +3,13 @@
   <head>
     <title>This is the title of the paypal page</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VQG55C6HEZ"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-191514812-1"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-VQG55C6HEZ');
+    gtag('config', 'UA-191514812-1');
     </script>
   </head>
   <body>
