--- a/purchase.html
+++ b/purchase.html
@@ -3,6 +3,7 @@
   <head>
     <title>This is the title of the purchase page</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script src="https://www.googleoptimize.com/optimize.js?id=OPT-K7HQSP2"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-191514812-1"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
